organize imports, show() -> setVisible(true), Integer.valueOf(...)